--- a/index.html
+++ b/index.html
@@ -7,31 +7,21 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" href="/media/hvh-icon-80x80.png" type="image/png">
     <title>Bronsschat Westfrisiaweg</title>
-
     <!-- css -->
     <link rel="stylesheet" href="css/master.css">
     <link rel="stylesheet" href="css/typeface.css">
     <link rel="stylesheet" href="css/slideshow2.css">
     <link rel="stylesheet" href="css/media.css">
-
     <!-- leaflet css -->
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.7.1/dist/leaflet.css"
         integrity="sha512-xodZBNTC5n17Xt2atTPuE1HxjVMSvLVW9ocqUKLsCC5CXdbqCmblAshOMAS6/keqq/sMZMZ19scR4PsZChSR7A=="
         crossorigin="" />
-
     <!-- leaflet js -->
     <script src="https://unpkg.com/leaflet@1.7.1/dist/leaflet.js"
         integrity="sha512-XQoYMqMTK8LvdxXYG3nZ448hOEQiglfqkJs1NOQV44cWnUrBc8PkAOcXy20w0vlaXaVUearIOBhiXZ5V3ynxwA=="
         crossorigin=""></script>
-
     <script src="/js/markerwaardweg3.js" type="text/javascript"></script>
-
-    <script src="https://kit.fontawesome.com/ea176faa6e.js" crossorigin="anonymous"></script>
-
-
-
 </head>
-
 <body>
     <!-- header -->
     <div class="header" id="page-one">
@@ -42,14 +32,12 @@
             <h1>De bronsschat van de Westfrisiaweg</h1>
         </div>
     </div>
-
     <!-- homepage -->
     <section id="homepage">
         <div class="homepage">
             <div class="icon-scroll"></div>
         </div>
     </section>
-
     <!-- eerste pagina / intro -->
     <section id="intro">
         <div class="intro">
@@ -95,14 +83,11 @@
             </div>
         </div>
     </section>
-
     <!-- vindplaats / kaart -->
-
     <section id="vindplaats">
         <div class="vindplaats-titel">
             <h2>De vindplaats</h2>
         </div>
-
         <div class="flex">
             <div class="vindplaats-text">
                 <p>
@@ -119,7 +104,6 @@
                     Drechterland.
                 </p>
             </div>
-
             <div class="leaflet">
                 <div id="map">
                     <script src="/js/bronsschat.js" type="text/javascript"></script>
@@ -127,9 +111,7 @@
             </div>
         </div>
     </section>
-
     <!-- bronsschat -->
-
     <section id="vondsten">
         <div class="vondsten">
             <div class="vondsten-titel">
@@ -153,7 +135,6 @@
                         vennetjes werden achtergelaten. De theorie is dat dit een soort ‘offers’ waren.
                     </p>
                 </div>
-
                 <div class="vondsten-img">
                     <div class="slideshow">
                         <!-- <img src="/media/bronsschat/vondst1.webp" alt="" class="slides">
@@ -241,10 +222,7 @@
             </div>
         </div>
     </section>
-
-
     <!-- footer -->
-
     <footer class="footer">
         <div class="copy">
             <div class="logo-pnh">
@@ -253,12 +231,9 @@
             <p class="copy-text"> &#169; 2022</p>
         </div>
     </footer>
-
     <button onclick="topFunction()" id="myBtn" title="Go to top"><i class="fas fa-chevron-up"></i></button>
-    <script defer src="js/slideshow.js"></script>
-    <script defer src="js/scroll.js"></script>
-
+    <script async src="js/slideshow.js"></script>
+    <script async src="js/scroll.js"></script>
+    <script src="https://kit.fontawesome.com/ea176faa6e.js" crossorigin="anonymous"></script>
 </body>
-
-
 </html>
