--- a/index.html
+++ b/index.html
@@ -8,19 +8,18 @@
     <link rel="icon" href="/media/hvh-icon-80x80.png" type="image/png">
     <title>Bronsschat Westfrisiaweg</title>
     <!-- css -->
-    <link rel="stylesheet" href="css/master.css">
-    <link rel="stylesheet" href="css/typeface.css">
-    <link rel="stylesheet" href="css/slideshow2.css">
-    <link rel="stylesheet" href="css/media.css">
+    <link rel="stylesheet" href="css/master.css" type="text/css">
+    <link rel="stylesheet" href="css/typeface.css" type="text/css">
+    <link rel="stylesheet" href="css/slideshow2.css" type="text/css">
     <!-- leaflet css -->
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.7.1/dist/leaflet.css"
         integrity="sha512-xodZBNTC5n17Xt2atTPuE1HxjVMSvLVW9ocqUKLsCC5CXdbqCmblAshOMAS6/keqq/sMZMZ19scR4PsZChSR7A=="
         crossorigin="" />
     <!-- leaflet js -->
-    <script src="https://unpkg.com/leaflet@1.7.1/dist/leaflet.js"
+    <script async src="https://unpkg.com/leaflet@1.7.1/dist/leaflet.js"
         integrity="sha512-XQoYMqMTK8LvdxXYG3nZ448hOEQiglfqkJs1NOQV44cWnUrBc8PkAOcXy20w0vlaXaVUearIOBhiXZ5V3ynxwA=="
         crossorigin=""></script>
-    <script src="/js/markerwaardweg3.js" type="text/javascript"></script>
+    <script async src="/js/markerwaardweg3.js" type="text/javascript"></script>
 </head>
 <body>
     <!-- header -->
