--- a/index.html
+++ b/index.html
@@ -5,12 +5,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description"
+        content="Bronsschat van de Westfrisaweg; extra informatie over de bronsschat in Huis van Hilde.">
     <link rel="icon" href="/media/hvh-icon-80x80.png" type="image/png">
     <title>Bronsschat Westfrisiaweg</title>
     <!-- css -->
-    <link rel="stylesheet" href="css/master.css" type="text/css">
-    <link rel="stylesheet" href="css/typeface.css" type="text/css">
-    <link rel="stylesheet" href="css/slideshow2.css" type="text/css">
+    <link rel="stylesheet" href="css/master.css" >
+    <link rel="stylesheet" href="css/typeface.css" >
+    <link rel="stylesheet" href="css/slideshow2.css">
     <!-- leaflet css -->
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.7.1/dist/leaflet.css"
         integrity="sha512-xodZBNTC5n17Xt2atTPuE1HxjVMSvLVW9ocqUKLsCC5CXdbqCmblAshOMAS6/keqq/sMZMZ19scR4PsZChSR7A=="
@@ -136,19 +138,6 @@
                 </div>
                 <div class="vondsten-img">
                     <div class="slideshow">
-                        <!-- <img src="/media/bronsschat/vondst1.webp" alt="" class="slides">
-                        <img loading="lazy" src="/media/bronsschat/vondst2.webp" alt="" class="slides">
-                        <img loading="lazy" src="/media/bronsschat/vondst3.webp" alt="" class="slides">
-                        <img loading="lazy" src="/media/bronsschat/vondst4.webp" alt="" class="slides">
-                        <img loading="lazy" src="/media/bronsschat/vondst5.webp" alt="" class="slides">
-                        <img loading="lazy" src="/media/bronsschat/vondst6.webp" alt="" class="slides">
-                        <img loading="lazy" src="/media/bronsschat/vondst7.webp" alt="" class="slides">
-                        <img loading="lazy" src="/media/bronsschat/vondst8.webp" alt="" class="slides">
-                        <img loading="lazy" src="/media/bronsschat/vondst9.webp" alt="" class="slides">
-                        <img loading="lazy" src="/media/bronsschat/vondst10.webp" alt="" class="slides">
-                        <img loading="lazy" src="/media/bronsschat/vondst11.webp" alt="" class="slides">
-                        <img loading="lazy" src="/media/bronsschat/vondst12.webp" alt="" class="slides">
-                        <img loading="lazy" src="/media/bronsschat/vondst13.webp" alt="" class="slides"> -->
                         <div class="slides ">
                             <div class="numbertext">1 / 13</div>
                             <img style="width: 105%" src="/media/bronsschat/vondst1.webp" alt="">
@@ -225,7 +214,7 @@
     <footer class="footer">
         <div class="copy">
             <div class="logo-pnh">
-                <a target="_blank" href="https://www.noord-holland.nl"> <img id="pnh" src="/media/PNH_logo.webp" alt=""></a>
+                <a target="_blank" href="https://www.noord-holland.nl"> <img id="pnh" src="/media/PNH_logo.webp" alt="logo provincie noord-holland"></a>
             </div>
             <p class="copy-text"> &#169; 2022</p>
         </div>
