--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 </head>
 <body>
     <!-- header -->
-    <div class="header" id="page-one">
+    <div class="header">
         <div class="logo">
             <img src="/media/logo.svg" alt="">
         </div>
