add tekst bewoners

--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
     <link rel="icon" href="/media/hvh-icon-80x80.png" type="image/png">
     <title>Bronsschat Westfrisiaweg</title>
     <!-- css -->
-    <link rel="stylesheet" href="css/master.css" >
-    <link rel="stylesheet" href="css/typeface.css" >
+    <link rel="stylesheet" href="css/master.css">
+    <link rel="stylesheet" href="css/typeface.css">
     <link rel="stylesheet" href="css/slideshow2.css">
     <!-- leaflet css -->
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.7.1/dist/leaflet.css"
@@ -22,7 +22,9 @@
         integrity="sha512-XQoYMqMTK8LvdxXYG3nZ448hOEQiglfqkJs1NOQV44cWnUrBc8PkAOcXy20w0vlaXaVUearIOBhiXZ5V3ynxwA=="
         crossorigin=""></script>
     <script src="/js/markerwaardweg3.js" type="text/javascript"></script>
+
 </head>
+
 <body>
     <!-- header -->
     <div class="header">
@@ -68,18 +70,10 @@
                         persoon heeft met de handeling een offer gebracht; mogelijk een schenking gedaan aan een
                         godheid.
                     </p>
-                    <br>
-                    <p>
-                        De Westfrisiaweg is bijzonder rijk aan sporen uit de Bronstijd; het is echt een topgebied. De
-                        bewoners van toen hebben hun sporen achtergelaten in het landschap en wij leggen daar nu nieuwe
-                        overheen. Het kan niet anders dan dat daardoor ook sporen uit het verleden voorgoed gewist
-                        worden. Daarom is het bijzonder belangrijk dat we de aanknopingspunten met onze geschiedenis
-                        veilig stellen. De bronsschat is zo’n belangrijk aanknopingspunt. Met deze vondst is weer een
-                        belangrijk stukje van de gigantische puzzel van onze geschiedenis ontdekt.
-                    </p>
                 </div>
                 <div class="intro-img">
                     <img id="intro-img" src="/media/werk.webp" alt="">
+                    <figcaption style="color: #fff;">Opgraving bij de Westfrisaweg.</figcaption>
                 </div>
             </div>
         </div>
@@ -103,6 +97,15 @@
                     binnen de
                     gemeente Medemblik. Het overgrote deel van de opgravingen vonden plaats binnen de gemeente
                     Drechterland.
+                </p>
+                <br>
+                <p>
+                    De Westfrisiaweg is bijzonder rijk aan sporen uit de Bronstijd; het is echt een topgebied. De
+                    bewoners van toen hebben hun sporen achtergelaten in het landschap en wij leggen daar nu nieuwe
+                    overheen. Het kan niet anders dan dat daardoor ook sporen uit het verleden voorgoed gewist
+                    worden. Daarom is het bijzonder belangrijk dat we de aanknopingspunten met onze geschiedenis
+                    veilig stellen. De bronsschat is zo’n belangrijk aanknopingspunt. Met deze vondst is weer een
+                    belangrijk stukje van de gigantische puzzel van onze geschiedenis ontdekt.
                 </p>
             </div>
             <div class="leaflet">
@@ -145,62 +148,62 @@
                         </div>
                         <div class="slides ">
                             <div class="numbertext">2 / 13</div>
-                            <img style="width: 105%" style="width: 100%"src="/media/bronsschat/vondst2.webp" alt="">
+                            <img style="width: 105%" style="width: 100%" src="/media/bronsschat/vondst2.webp" alt="">
                             <div class="text"> <span> Armband </span> </div>
                         </div>
                         <div class="slides ">
                             <div class="numbertext">3 / 13</div>
-                            <img style="width: 105%" style="width: 100%"src="/media/bronsschat/vondst3.webp" alt="">
+                            <img style="width: 105%" style="width: 100%" src="/media/bronsschat/vondst3.webp" alt="">
                             <div class="text"> <span> Armband </span> </div>
                         </div>
                         <div class="slides ">
                             <div class="numbertext">4 / 13</div>
-                            <img style="width: 105%" style="width: 100%"src="/media/bronsschat/vondst4.webp" alt="">
+                            <img style="width: 105%" style="width: 100%" src="/media/bronsschat/vondst4.webp" alt="">
                             <div class="text"> <span> Waarschijnlijk bronzen onderdeel van een ‘kostuum’ </span> </div>
                         </div>
                         <div class="slides ">
                             <div class="numbertext">5 / 13</div>
-                            <img style="width: 105%" style="width: 100%"src="/media/bronsschat/vondst5.webp" alt="">
+                            <img style="width: 105%" style="width: 100%" src="/media/bronsschat/vondst5.webp" alt="">
                             <div class="text"> <span> Waarschijnlijk bronzen onderdeel van een ‘kostuum’ </span> </div>
                         </div>
                         <div class="slides ">
                             <div class="numbertext">6 / 13</div>
-                            <img style="width: 105%" style="width: 100%"src="/media/bronsschat/vondst6.webp" alt="">
+                            <img style="width: 105%" style="width: 100%" src="/media/bronsschat/vondst6.webp" alt="">
                             <div class="text"> <span> Ringen </span> </div>
                         </div>
                         <div class="slides ">
                             <div class="numbertext">7 / 13</div>
-                            <img style="width: 105%" style="width: 100%"src="/media/bronsschat/vondst7.webp" alt="">
+                            <img style="width: 105%" style="width: 100%" src="/media/bronsschat/vondst7.webp" alt="">
                             <div class="text"> <span> Ringen </span> </div>
                         </div>
                         <div class="slides ">
                             <div class="numbertext">8 / 13</div>
-                            <img style="width: 105%" style="width: 100%"src="/media/bronsschat/vondst8.webp" alt="">
+                            <img style="width: 105%" style="width: 100%" src="/media/bronsschat/vondst8.webp" alt="">
                             <div class="text"> <span> Ringen </span> </div>
                         </div>
                         <div class="slides ">
                             <div class="numbertext">9 / 13</div>
-                            <img style="width: 105%" style="width: 100%"src="/media/bronsschat/vondst9.webp" alt="">
+                            <img style="width: 105%" style="width: 100%" src="/media/bronsschat/vondst9.webp" alt="">
                             <div class="text"> <span> Ringen </span> </div>
                         </div>
                         <div class="slides ">
                             <div class="numbertext">10 / 13</div>
-                            <img style="width: 105%" style="width: 100%"src="/media/bronsschat/vondst10.webp" alt="">
+                            <img style="width: 105%" style="width: 100%" src="/media/bronsschat/vondst10.webp" alt="">
                             <div class="text"> <span> Kledingnaald </span> </div>
                         </div>
                         <div class="slides ">
                             <div class="numbertext">11 / 13</div>
-                            <img style="width: 105%" style="width: 100%"src="/media/bronsschat/vondst11.webp" alt="">
+                            <img style="width: 105%" style="width: 100%" src="/media/bronsschat/vondst11.webp" alt="">
                             <div class="text"> <span> Brilfibulae (mantelspeld) </span> </div>
                         </div>
                         <div class="slides ">
                             <div class="numbertext">12 / 13</div>
-                            <img style="width: 105%" style="width: 100%"src="/media/bronsschat/vondst12.webp" alt="">
+                            <img style="width: 105%" style="width: 100%" src="/media/bronsschat/vondst12.webp" alt="">
                             <div class="text"> <span> Brilfibulae (mantelspeld) </span> </div>
                         </div>
                         <div class="slides ">
                             <div class="numbertext">13 / 13</div>
-                            <img style="width: 105%" style="width: 100%"src="/media/bronsschat/vondst13.webp" alt="">
+                            <img style="width: 105%" style="width: 100%" src="/media/bronsschat/vondst13.webp" alt="">
                             <div class="text"> <span> Brilfibulae (mantelspeld) </span> </div>
                         </div>
                         <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
@@ -210,11 +213,48 @@
             </div>
         </div>
     </section>
+    <!-- de vroegere bewoners -->
+    <section id="bewoners">
+        <div class="bewoners">
+            <div class="bewoners-titel">
+                <h2>De vroegere bewoners</h2>
+            </div>
+            <div class="flex">
+                <div class="bewoners-text">
+                    <p>Op de locatie van de Markerwaardweg lag een kleine boeren gemeenschap. Op basis van de
+                        aardewerkvondsten weten we nu al dat het gehucht over een periode van tenminste enkele eeuwen
+                        bewoond is geweest, van de midden- tot de late bronstijd.
+                        Het is algemeen aanvaard dat vanaf de midden- bronstijd het boerenbedrijf in Nederland tot zijn
+                        volle wasdom komt. Onderzoek heeft uitgewezen dat akkerbouw en veeteelt de voornaamste bronnen
+                        van voedselvoorziening werden, en dat jacht en visserij nog maar een klein onderdeel vormden. De
+                        woonstal boerderij doet zijn intrede, in deze vroege tijd opgetrokken uit een geraamte van
+                        houten palen, wanden van leem en daken van riet.
+                        Op de Markerwaardweg hebben we dan ook tientallen plattegronden van dit type boerderij
+                        aangetroffen. Dit wil niet zeggen dat de nederzetting uit evenzoveel boerderijen bestond. De
+                        houten gebouwen gingen over het algemeen maar voor een beperkte tijd mee, één of wellicht twee
+                        generaties.
+                    </p>
+                    <br>
+                    <p>
+                        Aan wie de bronzen objecten hebben toebehoord, daarover tasten we nog in het duister. Ging het
+                        om het eigendom van één individu, of om een gemeenschappelijk bezit, van alleen het plaatselijke
+                        gehucht of de gehele regio? De aanwezigheid van meerdere fibulae lijkt te suggereren dat in
+                        ieder geval meerdere individuen bij dit depot betrokken waren.
+                    </p>
+                </div>
+                <div class="bewoners-img">
+                    <img id="bewoners-img" src="/media/kaart.webp" alt="">
+                    <figcaption>Landschap in de Bronstijd en bekende vindplaatsen.</figcaption>
+                </div>
+            </div>
+        </div>
+    </section>
     <!-- footer -->
     <footer class="footer">
         <div class="copy">
             <div class="logo-pnh">
-                <a target="_blank" href="https://www.noord-holland.nl"> <img id="pnh" src="/media/PNH_logo.webp" alt="logo provincie noord-holland"></a>
+                <a target="_blank" href="https://www.noord-holland.nl"> <img id="pnh" src="/media/PNH_logo.webp"
+                        alt="logo provincie noord-holland"></a>
             </div>
             <p class="copy-text"> &#169; 2022</p>
         </div>
@@ -224,4 +264,5 @@
     <script async src="js/scroll.js"></script>
     <script src="https://kit.fontawesome.com/ea176faa6e.js" crossorigin="anonymous"></script>
 </body>
+
 </html>
