add google analytics

--- a/index.html
+++ b/index.html
@@ -9,6 +9,18 @@
         content="Bronsschat van de Westfrisaweg; extra informatie over de bronsschat in Huis van Hilde.">
     <link rel="icon" href="/media/hvh-icon-80x80.png" type="image/png">
     <title>Bronsschat Westfrisiaweg</title>
+
+    <!-- google analytics -->
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-F34T2GWCMW"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag() { dataLayer.push(arguments); }
+        gtag('js', new Date());
+
+        gtag('config', 'G-F34T2GWCMW');
+    </script>
+    
     <!-- css -->
     <link rel="stylesheet" href="css/master.css">
     <link rel="stylesheet" href="css/typeface.css">
