nieuwe google analytics

--- a/index.html
+++ b/index.html
@@ -11,15 +11,17 @@
     <title>Bronsschat Westfrisiaweg</title>
 
     <!-- google analytics -->
-    <!-- Global site tag (gtag.js) - Google Analytics -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-F34T2GWCMW"></script>
-    <script>
-        window.dataLayer = window.dataLayer || [];
-        function gtag() { dataLayer.push(arguments); }
-        gtag('js', new Date());
 
-        gtag('config', 'G-F34T2GWCMW');
-    </script>
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-D7MKPS7BB7"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-D7MKPS7BB7');
+</script>
+
     
     <!-- css -->
     <link rel="stylesheet" href="css/master.css">
